--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
       <label for="pan">Tipo de Pan:</label>
           <div class="radio-list">
-              <label for="clasico"><input type="radio">Clásico</label>
-              <label for="ajonjoli"><input type="radio">Con Ajonjolí (+20 MXN)</label>
-              <label for="integral"><input type="radio">Integral (+20 MXN)</label>
-              <label for="brioche"><input type="radio">Brioche (+50 MXN)</label>
+              <label for="clasico"><input type="radio" name="Pan" value="0" >Clásico</label>
+              <label for="ajonjoli"><input type="radio" name="Pan" value="20">Con Ajonjolí (+20 MXN)</label>
+              <label for="integral"><input type="radio" name="Pan" value="20">Integral (+20 MXN)</label>
+              <label for="brioche"><input type="radio" name="Pan" value="50">Brioche (+50 MXN)</label>
           </div>
 
       <label>Ingredientes adicionales (5.00 MXN c/u):</label>
@@ -118,7 +118,8 @@
 
       <div class="total" id="total">Total: $0.00</div>
 
-      <button type="button">Calcular Total</button>
+      <button type="button" onclick="calcularTotal()">Calcular Total</button>
+
     </form>
     <div class="imagenes">
       <img src="" alt="">
@@ -126,5 +127,40 @@
       <img src="img/KFD_SpicyBBQBaconRanchBurger35382_WEB.avif" alt="Hamburguesa 2">
     </div>
   </div>
+
+  <script>
+function calcularTotal() {
+
+  const especialidad = document.getElementById("especialidad").value;
+  let precioBase = 0;
+  switch (especialidad) {
+    case "clasica": precioBase = 80; break;
+    case "bbq": precioBase = 100; break;
+    case "tocino": precioBase = 120; break;
+    case "doble": precioBase = 150; break;
+    case "hawaiana": precioBase = 160; break;
+  }
+
+  const panSeleccionado = document.querySelector('input[name="Pan"]:checked');
+  const precioPan = panSeleccionado ? parseInt(panSeleccionado.value) : 0;
+
+  const ingredientesSeleccionados = document.querySelectorAll('.checkbox-list input[type="checkbox"]:checked');
+  const numIngredientes = ingredientesSeleccionados.length;
+
+  const cantidad = parseInt(document.getElementById("cantidad").value) || 1;
+
+  const esDomicilio = document.getElementById("domicilio").checked;
+
+  let total = (precioBase + precioPan + (numIngredientes * 5)) * cantidad;
+  if (esDomicilio) {
+    total += 30;
+  }
+
+  document.getElementById("total").innerText = `Total: $${total.toFixed(2)} MXN`;
+
+
+}
+</script>
+
 </body>
 </html>
